--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     Good luck and Happy Coding!
 
     - The freeCodeCamp Team
-    Hello Worlddone!
+    Hello World we are software developers!
 
     -->
     <script  src="js/index.js"></script>
