--- a/index.html
+++ b/index.html
@@ -2,12 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Fork Me! FCC: Test Suite Template</title>
+    <title>Alber</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+
+    <h1 id="title">Albert Einstein</h1>
+    <p>Pioneer Scientist in the field of physics</p>
+    <figure id="img-div">
+      <img src="einstein.jpg" 
+            alt="Albert Einstein" 
+            id="einstein-img">
+    </figure>
 
     <!--
 
