--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
             alt="Albert Einstein" 
             id="einstein-img">
     </figure>
-
+    <figcaption id="img-caption">
+      <p>Albert Einstein</p>
+      <p>1879 - 1955</p>
+    </figcaption>
     <!--
 
     Hello Camper!
