--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
   <title>Alber</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
-
-<<<<<<< HEAD
 <body>
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+  <script src="js/script.js"></script>
 
   <h1 id="title">Albert Einstein</h1>
   <p>Pioneer Scientist in the field of physics</p>
@@ -40,22 +39,7 @@
     </p>
     <a href="https://en.wikipedia.org/wiki/Albert_Einstein" id="tribute-link" target="_blank"></a>
   </section>
-
-  <!--
-=======
-    <h1 id="title">Albert Einstein</h1>
-    <p>Pioneer Scientist in the field of physics</p>
-    <figure id="img-div">
-      <img src="einstein.jpg" 
-            alt="Albert Einstein" 
-            id="einstein-img">
-    </figure>
-    <figcaption id="img-caption">
-      <p>Albert Einstein</p>
-      <p>1879 - 1955</p>
-    </figcaption>
-    <!--
->>>>>>> 99b9569d2185ce2d8c965559be3681298ad5c170
+  
 
     Hello Camper!
 
